--- a/views/views.xml
+++ b/views/views.xml
@@ -2,9 +2,9 @@
   <data>
     <!-- explicit list view definition -->
 <!--
-    <record model="ir.ui.view" id="/var/lib/odoo/addons/18.0/gestion_paqueteria.list">
-      <field name="name">/var/lib/odoo/addons/18.0/gestion_paqueteria list</field>
-      <field name="model">/var/lib/odoo/addons/18.0/gestion_paqueteria./var/lib/odoo/addons/18.0/gestion_paqueteria</field>
+    <record model="ir.ui.view" id="gestion_paqueteria.list">
+      <field name="name">gestion_paqueteria list</field>
+      <field name="model">gestion_paqueteria.gestion_paqueteria</field>
       <field name="arch" type="xml">
         <list>
           <field name="name"/>
@@ -17,18 +17,18 @@
 
     <!-- actions opening views on models -->
 <!--
-    <record model="ir.actions.act_window" id="/var/lib/odoo/addons/18.0/gestion_paqueteria.action_window">
-      <field name="name">/var/lib/odoo/addons/18.0/gestion_paqueteria window</field>
-      <field name="res_model">/var/lib/odoo/addons/18.0/gestion_paqueteria./var/lib/odoo/addons/18.0/gestion_paqueteria</field>
+    <record model="ir.actions.act_window" id="gestion_paqueteria.action_window">
+      <field name="name">gestion_paqueteria window</field>
+      <field name="res_model">gestion_paqueteria.gestion_paqueteria</field>
       <field name="view_mode">list,form</field>
     </record>
 -->
 
     <!-- server action to the one above -->
 <!--
-    <record model="ir.actions.server" id="/var/lib/odoo/addons/18.0/gestion_paqueteria.action_server">
-      <field name="name">/var/lib/odoo/addons/18.0/gestion_paqueteria server</field>
-      <field name="model_id" ref="model_/var/lib/odoo/addons/18.0/gestion_paqueteria_/var/lib/odoo/addons/18.0/gestion_paqueteria"/>
+    <record model="ir.actions.server" id="gestion_paqueteria.action_server">
+      <field name="name">gestion_paqueteria server</field>
+      <field name="model_id" ref="model_gestion_paqueteria_gestion_paqueteria"/>
       <field name="state">code</field>
       <field name="code">
         action = {
@@ -42,19 +42,19 @@
 
     <!-- Top menu item -->
 <!--
-    <menuitem name="/var/lib/odoo/addons/18.0/gestion_paqueteria" id="/var/lib/odoo/addons/18.0/gestion_paqueteria.menu_root"/>
+    <menuitem name="gestion_paqueteria" id="gestion_paqueteria.menu_root"/>
 -->
     <!-- menu categories -->
 <!--
-    <menuitem name="Menu 1" id="/var/lib/odoo/addons/18.0/gestion_paqueteria.menu_1" parent="/var/lib/odoo/addons/18.0/gestion_paqueteria.menu_root"/>
-    <menuitem name="Menu 2" id="/var/lib/odoo/addons/18.0/gestion_paqueteria.menu_2" parent="/var/lib/odoo/addons/18.0/gestion_paqueteria.menu_root"/>
+    <menuitem name="Menu 1" id="gestion_paqueteria.menu_1" parent="gestion_paqueteria.menu_root"/>
+    <menuitem name="Menu 2" id="gestion_paqueteria.menu_2" parent="gestion_paqueteria.menu_root"/>
 -->
     <!-- actions -->
 <!--
-    <menuitem name="List" id="/var/lib/odoo/addons/18.0/gestion_paqueteria.menu_1_list" parent="/var/lib/odoo/addons/18.0/gestion_paqueteria.menu_1"
-              action="/var/lib/odoo/addons/18.0/gestion_paqueteria.action_window"/>
-    <menuitem name="Server to list" id="/var/lib/odoo/addons/18.0/gestion_paqueteria" parent="/var/lib/odoo/addons/18.0/gestion_paqueteria.menu_2"
-              action="/var/lib/odoo/addons/18.0/gestion_paqueteria.action_server"/>
+    <menuitem name="List" id="gestion_paqueteria.menu_1_list" parent="gestion_paqueteria.menu_1"
+              action="gestion_paqueteria.action_window"/>
+    <menuitem name="Server to list" id="gestion_paqueteria" parent="gestion_paqueteria.menu_2"
+              action="gestion_paqueteria.action_server"/>
 -->
   </data>
 </odoo>
